# pyhanko-eoi-plugin

./: LICENSE  README.rst  pyproject.toml
.github/workflows/: build-pipeline.yml  codeql-analysis.yml  release.yml  static-analysis.yml
pyhanko_eoi/: cli.py  eoi.py
pyhanko_eoi_tests/: test_cli.py
